--- a/frontend/frontend/src/components/DetailedAnalysisButtons/DetailedAnalysisButtons.css
+++ b/frontend/frontend/src/components/DetailedAnalysisButtons/DetailedAnalysisButtons.css
@@ -1,8 +1,6 @@
 .analysis-section {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   padding: 20px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
@@ -11,9 +9,8 @@
 
 .analysis-section2 {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  text-align: left;
   padding: 20px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
