--- a/frontend/frontend/src/components/DetailedAnalysisButtons/DetailedAnalysisButtons.css
+++ b/frontend/frontend/src/components/DetailedAnalysisButtons/DetailedAnalysisButtons.css
@@ -1,6 +1,7 @@
 .analysis-section {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   padding: 20px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
@@ -10,6 +11,7 @@
 .analysis-section2 {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   text-align: left;
   padding: 20px;
   border: 1px solid #e0e0e0;
