--- a/BlockHack-Frontend/src/components/Main.css
+++ b/BlockHack-Frontend/src/components/Main.css
@@ -1,4 +1,4 @@
-.main-content {
+.main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,4 +40,14 @@ input[type="file"] {
   border-radius: 5px;
   width: 100%;
   text-align: center;
+}
+
+/*  */
+
+.loading-main {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  width: 300px;
 }
